Smoothing for separation

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -36,7 +36,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7062ba23bbc0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7a5a48c51640>\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -134,13 +134,13 @@
       "[0.25]\n",
       "[4.]\n",
       "[4.]\n",
+      "[0.9021098]\n",
       "[0.9021097956087902]\n",
-      "[0.9021097956087902]\n",
+      "[0.15035163]\n",
       "[0.15035163260146506]\n",
-      "[0.15035163260146506]\n",
+      "[0.20833333]\n",
       "[0.20833333333333334]\n",
-      "[0.20833333333333334]\n",
-      "[0.17999999999999997]\n",
+      "[0.18000002]\n",
       "[0.18]\n",
       "  Vectorized check for AreaCost\n",
       "[[ 0.5   0.2   0.4 ]\n",
@@ -154,45 +154,99 @@
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing CollisionCostSeparation\n",
-      "[4.103844717014923]\n",
-      "[4.1038447170149235]\n",
-      "[5.056422950038268]\n",
-      "[5.056422950038268]\n",
-      "[0.14129901622533805]\n",
-      "[0.14129901622533805]\n",
-      "[3.9433940660198905]\n",
-      "[3.9433940660198914]\n",
-      "[2.7094618373319235]\n",
-      "[2.7094618373319235]\n",
-      "[3.3477124745106868]\n",
-      "[3.347712474510688]\n",
+      "[2.9345014]\n",
+      "[2.934502983518836]\n",
+      "[3.6563957]\n",
+      "[3.6563964763427514]\n",
+      "[0.08949653]\n",
+      "[0.08949652577810582]\n",
+      "[2.7657313]\n",
+      "[2.7657311316180877]\n",
+      "[1.8850206]\n",
+      "[1.8850203377947548]\n",
+      "[2.3248198]\n",
+      "[2.3248201421553545]\n",
       "  Vectorized check for CollisionCostSeparation\n",
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
-      "[4.10384472 5.05642295]\n",
+      "[2.93450298 3.65639648]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "  Vectorized check for CollisionCostSeparation\n",
       "[[ 0.83333333  1.25        1.04719755]\n",
       " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.14129902 3.94339407]\n",
+      "[0.08949653 2.76573113]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
-      "[8.39321501422172]\n",
-      "[7.586309986541806]\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Cost mismatch: [7.58630999] vs [8.39321501]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_test\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimportlib\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mpack_test\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun_all_tests\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/core/pack_test.py:23\u001b[39m, in \u001b[36mrun_all_tests\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     21\u001b[39m kgs.debugging_mode = \u001b[32m2\u001b[39m    \n\u001b[32m     22\u001b[39m pack_cuda_primitives_test.run_all_tests()\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m \u001b[43mtest_costs\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAll tests passed.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/core/pack_test.py:117\u001b[39m, in \u001b[36mtest_costs\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    115\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(c, pack_cost.CostDummy):\n\u001b[32m    116\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m cost_ref > \u001b[32m0\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m117\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m cp.allclose(cost_ref, cost_fast, rtol=\u001b[32m1e-6\u001b[39m), \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCost mismatch: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcost_ref\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m vs \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcost_fast\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    118\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m CUDA_float32 \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m sol_single.periodic:\n\u001b[32m    119\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m cp.allclose(grad_ref, grad_fast, rtol=\u001b[32m1e-4\u001b[39m, atol=\u001b[32m1e-4\u001b[39m), \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGradient mismatch: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrad_ref\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m vs \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrad_fast\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m            \n",
-      "\u001b[31mAssertionError\u001b[39m: Cost mismatch: [7.58630999] vs [8.39321501]"
+      "[7.58631]\n",
+      "[7.586309986541806]\n",
+      "[0.052900344]\n",
+      "[0.05290033643998625]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[7.58630999 0.05290034]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[34.23035]\n",
+      "[34.2303581276428]\n",
+      "[0.17541064]\n",
+      "[0.17541070632250602]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[34.23035813  0.17541071]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[2.1456323]\n",
+      "[2.1456324600829237]\n",
+      "[2.6354358]\n",
+      "[2.635436698619012]\n",
+      "[0.039653163]\n",
+      "[0.03965316292449557]\n",
+      "[1.8148139]\n",
+      "[1.814813992804854]\n",
+      "[1.2302275]\n",
+      "[1.2302274038514638]\n",
+      "[1.5903871]\n",
+      "[1.59038723689566]\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[2.14563246 2.6354367 ]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.03965316 1.81481399]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[1.6061529]\n",
+      "[1.6061534151044772]\n",
+      "[7.516927]\n",
+      "[7.51692688501148]\n",
+      "[1.3955544]\n",
+      "[1.3955543982807868]\n",
+      "[1.4085456]\n",
+      "[1.408545668708165]\n",
+      "[1.1253386]\n",
+      "[1.125338551199577]\n",
+      "[1.2743137]\n",
+      "[1.2743137423532063]\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[1.60615342 7.51692689]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[1.3955544  1.40854567]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "All tests passed.\n"
      ]
     }
    ],
@@ -208,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -228,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
