--- a/analysis/test_many_ga.ipynb
+++ b/analysis/test_many_ga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "setup",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,7 @@
     "import dill\n",
     "import importlib\n",
     "from multiprocess import Process, Queue, cpu_count\n",
+    "import kaggle_support as kgs\n",
     "importlib.reload(pack_runner)\n",
     "\n",
     "# Configuration\n",
