Prep second run

--- a/analysis/test_many_ga.ipynb
+++ b/analysis/test_many_ga.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "setup",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (pack_runner.py, line 164)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
-      "  File \u001b[92m/venv/main/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3699\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[36m  \u001b[39m\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mimport pack_runner\u001b[39m\n",
-      "  \u001b[36mFile \u001b[39m\u001b[32m/packing/code/analysis/../core/pack_runner.py:164\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mres.modifier_dict['JiggleClusterSmallMaxN'] = pm(5, lamda r:r.integers(3,20), set_JiggleClusterSmallMaxN)\u001b[39m\n                                                        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../core')\n",
@@ -43,7 +31,7 @@
     "os.makedirs(output_dir + 'full/', exist_ok=True)\n",
     "os.makedirs(output_dir + 'abbr/', exist_ok=True)\n",
     "\n",
-    "fast_mode = True  # Set to True for quick testing\n",
+    "fast_mode = False  # Set to True for quick testing\n",
     "which_runner = pack_runner.baseline_runner  # Which example runner to use\n",
     "n_parallel_processes = 2 if kgs.env=='local' else 4\n",
     "print(f\"Will use {n_parallel_processes} parallel processes\")"
@@ -366,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ipykernel)",
+   "display_name": "rapids-25.10",
    "language": "python",
    "name": "python3"
   },
@@ -380,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.10"
   }
  },
  "nbformat": 4,
