--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -44,12 +44,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0, Trees 10, Best cost: 0.04500950, Est: 0.45009502, h: 2.105745\n",
-      "Generation 1, Trees 10, Best cost: 0.04247797, Est: 0.42477969, h: 2.043820\n",
-      "Generation 2, Trees 10, Best cost: 0.04145373, Est: 0.41453730, h: 2.020963\n",
-      "Generation 3, Trees 10, Best cost: 0.04089892, Est: 0.40898923, h: 2.008978\n",
-      "Generation 4, Trees 10, Best cost: 0.04086712, Est: 0.40867116, h: 2.008619\n",
-      "Runtime: 10.4s\n",
+      "Generation 0, Trees 10, Best cost: 0.03852542, Est: 0.38525422, h: 1.952043\n",
+      "Generation 1, Trees 10, Best cost: 0.03849154, Est: 0.38491540, h: 1.951635\n",
+      "Runtime: 16.3s\n",
       "=== Testing line_intersection ===\n",
       "=== Compiling CUDA Primitives Test Kernels ===\n",
       "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
@@ -72,7 +69,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7922d30ee2c0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7e807b3c2bc0>\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -170,13 +167,13 @@
       "[0.25]\n",
       "[4.]\n",
       "[4.]\n",
+      "[0.9021098]\n",
       "[0.9021097956087902]\n",
-      "[0.9021097956087902]\n",
+      "[0.15035163]\n",
       "[0.15035163260146506]\n",
-      "[0.15035163260146506]\n",
+      "[0.20833333]\n",
       "[0.20833333333333334]\n",
-      "[0.20833333333333334]\n",
-      "[0.17999999999999997]\n",
+      "[0.18000002]\n",
       "[0.18]\n",
       "  Vectorized check for AreaCost\n",
       "[[ 0.5   0.2   0.4 ]\n",
@@ -189,100 +186,7 @@
       "[0.9021098  0.15035163]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
-      "Testing CollisionCostSeparation\n",
-      "[4.103844717014923]\n",
-      "[4.1038447170149235]\n",
-      "[5.056422950038268]\n",
-      "[5.056422950038268]\n",
-      "[0.14129901622533805]\n",
-      "[0.14129901622533805]\n",
-      "[3.9433940660198905]\n",
-      "[3.9433940660198914]\n",
-      "[2.7094618373319235]\n",
-      "[2.7094618373319235]\n",
-      "[3.3477124745106868]\n",
-      "[3.347712474510688]\n",
-      "  Vectorized check for CollisionCostSeparation\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[4.10384472 5.05642295]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CollisionCostSeparation\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.14129902 3.94339407]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[8.39321501422172]\n",
-      "[8.393215014221717]\n",
-      "[0.07738519828213784]\n",
-      "[0.07738519828213797]\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[8.39321501 0.0773852 ]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing BoundaryDistanceCost\n",
-      "[41.96607507110859]\n",
-      "[41.966075071108584]\n",
-      "[0.38692599141068923]\n",
-      "[0.38692599141068984]\n",
-      "  Vectorized check for BoundaryDistanceCost\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[41.96607507  0.38692599]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CollisionCostOverlappingArea\n",
-      "[2.1456324600829237]\n",
-      "[2.1456324600829237]\n",
-      "[2.635436698619011]\n",
-      "[2.635436698619012]\n",
-      "[0.03965316292449558]\n",
-      "[0.03965316292449557]\n",
-      "[1.8148139928048543]\n",
-      "[1.814813992804854]\n",
-      "[1.2302274038514638]\n",
-      "[1.2302274038514638]\n",
-      "[1.59038723689566]\n",
-      "[1.59038723689566]\n",
-      "  Vectorized check for CollisionCostOverlappingArea\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[2.14563246 2.6354367 ]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CollisionCostOverlappingArea\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.03965316 1.81481399]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "\n",
-      "Testing CostCompound\n",
-      "[1.606153415104477]\n",
-      "[1.6061534151044772]\n",
-      "[7.51692688501148]\n",
-      "[7.51692688501148]\n",
-      "[1.3955543982807868]\n",
-      "[1.3955543982807868]\n",
-      "[1.408545668708165]\n",
-      "[1.408545668708165]\n",
-      "[1.125338551199577]\n",
-      "[1.125338551199577]\n",
-      "[1.2743137423532058]\n",
-      "[1.2743137423532063]\n",
-      "  Vectorized check for CostCompound\n",
-      "[[ 0.5   0.2   0.4 ]\n",
-      " [ 2.   -0.1  -0.15]]\n",
-      "[1.60615342 7.51692689]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "  Vectorized check for CostCompound\n",
-      "[[ 0.83333333  1.25        1.04719755]\n",
-      " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[1.3955544  1.40854567]\n",
-      "  ✓ Vectorized results exactly match individual calls\n",
-      "All tests passed.\n"
+      "Testing CollisionCostSeparation\n"
      ]
     }
    ],
@@ -299,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -319,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
