--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -25,9 +25,7 @@
       "local\n",
       "False\n",
       "stop final relax at some point\n",
-      "[Optimizer(comment='')]\n",
-      "4.0\n",
-      "{'seed': 0, 'scale_population': 4.0, 'genetic_diversity': np.True_, 'alt_diversity': np.False_, 'no_jiggle': np.True_, 'bfgs_for_rough': np.True_, 'scale_rough_iterations': 0.3, 'scale_fine_iterations': 0.3, 'rough_steps': np.int64(1), 'fine_steps': np.int64(2), 'JiggleClusterSmallMaxN': 20, 'JiggleClusterBigMaxN': 20, 'TwistMinRadius': 0.5, 'TwistMaxRadius': 2.0, 'CrossoverMaxNtrees': 20, 'CrossoverSimpleMate': False, 'CrossoverP': 3.0}\n"
+      "{'seed': 0}\n"
      ]
     },
     {
@@ -46,7 +44,7 @@
      "text": [
       "Generation 0, Trees 10, Best cost: 0.03852542, Est: 0.38525422, h: 1.952043\n",
       "Generation 1, Trees 10, Best cost: 0.03849154, Est: 0.38491540, h: 1.951635\n",
-      "Runtime: 16.3s\n",
+      "Runtime: 13.8s\n",
       "=== Testing line_intersection ===\n",
       "=== Compiling CUDA Primitives Test Kernels ===\n",
       "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
@@ -69,7 +67,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7e807b3c2bc0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7ec52f161640>\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -186,7 +184,9 @@
       "[0.9021098  0.15035163]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
-      "Testing CollisionCostSeparation\n"
+      "Testing CollisionCostSeparation\n",
+      "[4.1038427]\n",
+      "[4.1038447170149235]\n"
      ]
     }
    ],
