--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -25,7 +25,7 @@
       "local\n",
       "False\n",
       "stop final relax at some point\n",
-      "{'seed': 0}\n"
+      "{'seed': 0, 'scale_population_size': 0.25}\n"
      ]
     },
     {
@@ -42,9 +42,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0, Trees 10, Best cost: 0.03852542, Est: 0.38525422, h: 1.952043\n",
-      "Generation 1, Trees 10, Best cost: 0.03849154, Est: 0.38491540, h: 1.951635\n",
-      "Runtime: 13.8s\n",
+      "Generation 0, Trees 10, Best cost: 0.03852847, Est: 0.38528469, h: 1.950727\n",
+      "Generation 1, Trees 10, Best cost: 0.03852847, Est: 0.38528469, h: 1.950727\n",
+      "Runtime: 11.2s\n",
       "=== Testing line_intersection ===\n",
       "=== Compiling CUDA Primitives Test Kernels ===\n",
       "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
@@ -67,7 +67,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7ec52f161640>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x783bf0df53c0>\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -186,7 +186,13 @@
       "\n",
       "Testing CollisionCostSeparation\n",
       "[4.1038427]\n",
-      "[4.1038447170149235]\n"
+      "[4.1038447170149235]\n",
+      "[5.0564213]\n",
+      "[5.056422950038268]\n",
+      "[0.14129902]\n",
+      "[0.14129901622533805]\n",
+      "[3.9433937]\n",
+      "[3.9433940660198914]\n"
      ]
     }
    ],
