Set up runner for (A)

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
       "local\n",
       "False\n",
       "stop final relax at some point\n",
-      "{'seed': 0, 'scale_population_size': 0.25}\n"
+      "{'seed': 0, 'set_fixed_h': 3.791088506196436, 'scale_population_size': 0.25}\n"
      ]
     },
     {
@@ -42,9 +42,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0, Trees 10, Best cost: 0.65426195, Est: 6.54261932, h: 8.043250\n",
-      "Generation 1, Trees 10, Best cost: 0.65145832, Est: 6.51458359, h: 8.027423\n",
-      "Runtime: 10.3s\n"
+      "Generation 0, Trees 10, Best cost: 0.00000000, Est: 0.00000000, h: 3.791089\n",
+      "Generation 1, Trees 10, Best cost: 0.00000000, Est: 0.00000000, h: 3.791089\n",
+      "Before optimization:  0.10071074962615967 0.0 3.1734958\n",
+      "After optimization:  0.09196136891841888 3.8709473301423714e-05 3.0318751\n",
+      "After optimization:  0.09135176986455917 3.529638343024999e-05 3.0218616\n",
+      "After optimization:  0.09093128889799118 1.987261748581659e-05 3.015152\n",
+      "After optimization:  0.09064533561468124 9.14651627681451e-06 3.0105846\n",
+      "After optimization:  0.09047151356935501 2.4250171009043697e-06 3.007808\n",
+      "After optimization:  0.09037652611732483 2.8848337052522766e-08 3.0062685\n",
+      "After optimization:  0.09027104079723358 1.0978701681096936e-07 3.004512\n",
+      "After optimization:  0.09021146595478058 3.6357086230509594e-09 3.0035224\n",
+      "After optimization:  0.09015810489654541 2.889456007793001e-09 3.002634\n",
+      "After optimization:  0.09012239426374435 5.41293287970035e-10 3.0020392\n",
+      "After optimization:  0.09010779112577438 1.5112822104867973e-10 3.001796\n",
+      "After optimization:  0.09009801596403122 5.166378436172181e-11 3.0016332\n",
+      "Runtime: 43.2s\n"
      ]
     },
     {
@@ -69,7 +82,7 @@
     "import pack_test\n",
     "\n",
     "import importlib\n",
-    "pack_test.run_all_tests(regenerate_reference=False)"
+    "pack_test.run_all_tests(regenerate_reference=True)"
    ]
   },
   {
