--- a/analysis/test_many_ga.ipynb
+++ b/analysis/test_many_ga.ipynb
@@ -616,7 +616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rapids-25.10",
+   "display_name": "Python3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.10"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
