More specific kernels

--- a/analysis/test_dimer.ipynb
+++ b/analysis/test_dimer.ipynb
@@ -22,7 +22,7 @@
     "import numpy as np\n",
     "import cupy as cp\n",
     "import copy\n",
-    "kgs.set_float32(False)\n",
+    "kgs.set_float32(True)\n",
     "#kgs.TREE_EXPANSION =  0.\n",
     "kgs.initialize_tree_globals()\n",
     "kgs.convex_breakdown, kgs.just_over_one"
