--- a/analysis/test_ga_benchmark.ipynb
+++ b/analysis/test_ga_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1471ed0",
    "metadata": {},
    "outputs": [
@@ -11,16 +11,37 @@
      "output_type": "stream",
      "text": [
       "local\n",
-      "local\n",
-      "stop final relax at some point\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:40: InstrumentationWarning: @typechecked only supports instrumenting functions wrapped with @classmethod, @staticmethod or @property -- not typechecking pack_dynamics.Optimizer.run_simulation\n",
-      "  @typechecked\n"
+      "stop final relax at some point\n",
+      "init CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling kernel variant: crystal ===\n",
+      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_crystal.cubin\n",
+      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 36 registers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_list_total\n",
+      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 43 registers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
+      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_overlap_list_total\n",
+      "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 78 registers, 1264 bytes cumulative stack size, 420 bytes cmem[0], 24 bytes cmem[2]\n",
+      "\n",
+      "\n",
+      "--- Kernel: multi_overlap_list_total [crystal] ---\n",
+      "  Max threads per block (kernel): 768\n",
+      "  Num registers: 78\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 1172\n",
+      "  Local memory (bytes): 1264\n",
+      "=== Compiling kernel variant: no_sep ===\n",
+      "Defines: ENABLE_OVERLAP_AREA\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_no_sep.cubin\n"
      ]
     }
    ],
@@ -47,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9de2cb15",
    "metadata": {},
    "outputs": [
