--- a/analysis/temp.ipynb
+++ b/analysis/temp.ipynb
@@ -2,10 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "4106fdd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/mnt/d//packing/code/core/../../results/many_ga/full/Baseline_4000_6d3f28a2_f.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_vis_sol\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkaggle_support\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkgs\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m a=\u001b[43mkgs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdill_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkgs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcode_dir\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m../../results/many_ga/full/Baseline_4000_6d3f28a2_f.pkl\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/kaggle_support.py:143\u001b[39m, in \u001b[36mdill_load\u001b[39m\u001b[34m(filename)\u001b[39m\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdill_load\u001b[39m(filename):\n\u001b[32m--> \u001b[39m\u001b[32m143\u001b[39m     filehandler = \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m;\n\u001b[32m    144\u001b[39m     data = dill.load(filehandler)\n\u001b[32m    145\u001b[39m     filehandler.close()\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '/mnt/d//packing/code/core/../../results/many_ga/full/Baseline_4000_6d3f28a2_f.pkl'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -22,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4485d30f",
    "metadata": {},
    "outputs": [
@@ -53,44 +73,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f5d64e40",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8101964321868308"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kgs.tree_area/0.30316722"
+    "import pack_io\n",
+    "import pandas as pd\n",
+    "[sol_list_ref, scores] = pack_io.dataframe_to_solution_list(pd.read_csv(kgs.temp_dir + '71.66.csv'))\n",
+    "#[sol_list_ref2, scores2] = pack_io.dataframe_to_solution_list(pd.read_csv(kgs.temp_dir + '71.66.csv'))\n",
+    "#for s in sol_list_ref:\n",
+    "#    s.rotate(-np.pi/2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "4abf4d82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "60.633444000000004"
+       "0.3655570032925072"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "0.30316722*200"
+    "scores[39]"
    ]
   },
   {
@@ -117,8 +131,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "98884f6a-d25b-4b71-b4ee-91b14383397b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.7523326078587433)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.sqrt(0.352*40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "118dd44a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3705625"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3.85**2/40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cd0d0d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -126,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ipykernel)",
+   "display_name": "rapids-25.10",
    "language": "python",
    "name": "python3"
   },
@@ -140,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.10"
   }
  },
  "nbformat": 4,
