--- a/analysis/test_many_ga.ipynb
+++ b/analysis/test_many_ga.ipynb
@@ -550,7 +550,7 @@
     "result_queue = Queue()\n",
     "active_processes = []\n",
     "completed_results = []\n",
-    "seeds_to_run = [a+4000 for a in list(range(n_seeds))]\n",
+    "seeds_to_run = [a+8000 for a in list(range(n_seeds))]\n",
     "next_seed_idx = 0\n",
     "\n",
     "# Limit parallel processes if using GPU (to avoid memory issues)\n",
@@ -754,7 +754,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rapids-25.10",
+   "display_name": "Python3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -768,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.10"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
