--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -10,15 +10,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "local\n",
-      "False\n",
-      "stop final relax at some point\n",
-      "init CUDA\n",
-      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
-      "GPU max threads per block: 1024\n",
-      "=== Compiling kernel variant: crystal ===\n",
-      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_crystal.cubin\n"
+      "{'seed': 0, 'scale_fine_iterations': 1.0, 'fine_steps': 4, 'set_used_fixed_h': False, 'set_cost0_scaling': 0.01, 'n_generations': 3, 'scale_population_size': 0.25}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/d/packing/code/core/pack_dynamics.py:61: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
+      "  x0 = from_dlpack(x0.toDlpack())\n",
+      "/mnt/d/packing/code/core/pack_dynamics.py:93: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
+      "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 0, Trees 10, Best cost: 0.04396895, Est: 0.43968945, h: 2.069241\n"
      ]
     }
    ],
