--- a/analysis/test_new_ga.ipynb
+++ b/analysis/test_new_ga.ipynb
@@ -127,30 +127,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9de2cb15",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:61: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  x0 = from_dlpack(x0.toDlpack())\n",
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:93: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Generation 0, Trees 40, Best cost: 0.19561130, Est: 0.48902826, h: 4.391835\n",
       "Generation 1, Trees 40, Best cost: 0.17793527, Est: 0.44483819, h: 4.191494\n",
-      "[0.17793527 0.1797324  0.18040356 0.18169464 0.18207127 0.18421637\n",
-      " 0.18448666 0.18796194 0.1902201 ]\n",
+      "Generation 2, Trees 40, Best cost: 0.17460646, Est: 0.43651614, h: 4.138963\n",
+      "Generation 3, Trees 40, Best cost: 0.17026095, Est: 0.42565236, h: 4.100847\n",
+      "Generation 4, Trees 40, Best cost: 0.16571155, Est: 0.41427889, h: 4.049143\n",
+      "[0.16571155 0.16851051 0.16890755 0.16909623 0.16915894 0.16964057\n",
+      " 0.1697016  0.17119023 0.17459366]\n",
       "[[0.1956113 ]\n",
-      " [0.17793527]]\n"
+      " [0.17793527]\n",
+      " [0.17460646]\n",
+      " [0.17026095]\n",
+      " [0.16571155]]\n"
      ]
     }
    ],
@@ -160,10 +156,14 @@
     "ga = pack_ga.GA()\n",
     "\n",
     "ga.N_trees_to_do = np.array([40])\n",
-    "ga.n_generations = 10\n",
+    "ga.n_generations = 5\n",
     "ga.population_size = 100\n",
     "ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
     "ga.do_legalize = False\n",
+    "#ga.initializer.base_solution.use_fixed_h = True\n",
+    "#ga.initializer.base_solution.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
+    "#ga.reduce_h_threshold = 0.01\n",
+    "#ga.reduce_h_amount = 0.03\n",
     "\n",
     "kgs.profiling=False\n",
     "ga.run()\n",
@@ -183,34 +183,28 @@
      "text": [
       "stop final relax at some point\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:61: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  x0 = from_dlpack(x0.toDlpack())\n",
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:93: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
-     ]
     }
    ],
    "source": [
     "import pack_ga2\n",
     "importlib.reload(pack_ga2)\n",
     "\n",
-    "runner = pack_ga2.Orchestrator(n_generations=10)\n",
+    "kgs.debugging_mode = 2\n",
+    "\n",
+    "runner = pack_ga2.Orchestrator(n_generations=5)\n",
     "runner.ga = pack_ga2.GASinglePopulationOld(N_trees_to_do=40)\n",
     "\n",
     "runner.ga.population_size = 100\n",
     "runner.ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
     "\n",
-    "runner.run()\n"
+    "runner.run()\n",
+    "print(runner.ga.population.fitness)\n",
+    "print(runner.ga.best_costs_per_generation)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "52a0f450",
    "metadata": {},
    "outputs": [
@@ -218,16 +212,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.17793527 0.1797324  0.18040356 0.18169464 0.18207127 0.18421637\n",
-      " 0.18448666 0.18796194 0.1902201 ]\n",
-      "[0.1956113  0.17793527]\n"
+      "[0.16571155 0.16851051 0.16890755 0.16909623 0.16915894 0.16964057\n",
+      " 0.1697016  0.17119023 0.17459366]\n",
+      "[[np.float32(0.1956113), np.float32(0.17793527), np.float32(0.17460646), np.float32(0.17026095), np.float32(0.16571155)]]\n"
      ]
     }
    ],
-   "source": [
-    "print(runner.ga.population.fitness)\n",
-    "print(np.array(runner.ga.best_cost_per_generation))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
