First round of fixed h

--- a/analysis/test_new_ga.ipynb
+++ b/analysis/test_new_ga.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "9de2cb15",
    "metadata": {},
    "outputs": [
@@ -135,18 +135,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0, Trees 40, Best cost: 0.19561130, Est: 0.48902826, h: 4.391835\n",
-      "Generation 1, Trees 40, Best cost: 0.17793527, Est: 0.44483819, h: 4.191494\n",
-      "Generation 2, Trees 40, Best cost: 0.17460646, Est: 0.43651614, h: 4.138963\n",
-      "Generation 3, Trees 40, Best cost: 0.17026095, Est: 0.42565236, h: 4.100847\n",
-      "Generation 4, Trees 40, Best cost: 0.16571155, Est: 0.41427889, h: 4.049143\n",
-      "[0.16571155 0.16851051 0.16890755 0.16909623 0.16915894 0.16964057\n",
-      " 0.1697016  0.17119023 0.17459366]\n",
-      "[[0.1956113 ]\n",
-      " [0.17793527]\n",
-      " [0.17460646]\n",
-      " [0.17026095]\n",
-      " [0.16571155]]\n"
+      "Generation 0, Trees 40, Best cost: 0.05277536, Est: 0.13193841, h: 4.000000\n",
+      "Generation 1, Trees 40, Best cost: 0.01487751, Est: 0.03719376, h: 4.000000\n",
+      "Generation 2, Trees 40, Best cost: 0.00756818, Est: 0.01892045, h: 4.000000\n",
+      "Generation 3, Trees 40, Best cost: 0.00527892, Est: 0.01319729, h: 3.970000\n",
+      "Generation 4, Trees 40, Best cost: 0.00482708, Est: 0.01206770, h: 3.940000\n",
+      "Generation 5, Trees 40, Best cost: 0.00751986, Est: 0.01879965, h: 3.910000\n",
+      "Generation 6, Trees 40, Best cost: 0.01064351, Est: 0.02660877, h: 3.880000\n",
+      "Generation 7, Trees 40, Best cost: 0.00977092, Est: 0.02442729, h: 3.880000\n",
+      "Generation 8, Trees 40, Best cost: 0.01755431, Est: 0.04388577, h: 3.850000\n",
+      "Generation 9, Trees 40, Best cost: 0.01266806, Est: 0.03167016, h: 3.850000\n",
+      "[0.01266806 0.01613898 0.0162402  0.0170702  0.01755431 0.01830413\n",
+      " 0.02128585 0.02188972 0.02657955]\n",
+      "[[0.05277536]\n",
+      " [0.01487751]\n",
+      " [0.00756818]\n",
+      " [0.00527892]\n",
+      " [0.00482708]\n",
+      " [0.00751986]\n",
+      " [0.01064351]\n",
+      " [0.00977092]\n",
+      " [0.01755431]\n",
+      " [0.01266806]]\n"
      ]
     }
    ],
@@ -156,14 +166,14 @@
     "ga = pack_ga.GA()\n",
     "\n",
     "ga.N_trees_to_do = np.array([40])\n",
-    "ga.n_generations = 5\n",
+    "ga.n_generations = 10\n",
     "ga.population_size = 100\n",
     "ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
     "ga.do_legalize = False\n",
-    "#ga.initializer.base_solution.use_fixed_h = True\n",
-    "#ga.initializer.base_solution.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
-    "#ga.reduce_h_threshold = 0.01\n",
-    "#ga.reduce_h_amount = 0.03\n",
+    "ga.initializer.base_solution.use_fixed_h = True\n",
+    "ga.initializer.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
+    "ga.reduce_h_threshold = 0.01\n",
+    "ga.reduce_h_amount = 0.03\n",
     "\n",
     "kgs.profiling=False\n",
     "ga.run()\n",
@@ -173,15 +183,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b9d9dcec",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:61: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
+      "  x0 = from_dlpack(x0.toDlpack())\n",
+      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:93: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
+      "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stop final relax at some point\n"
+      "Generation 0: Best costs = [0.052775364369153976]\n",
+      "Generation 1: Best costs = [0.014877505600452423]\n",
+      "Generation 2: Best costs = [0.015357094816863537]\n",
+      "Generation 3: Best costs = [0.012289338745176792]\n",
+      "Generation 4: Best costs = [0.012848918326199055]\n",
+      "Generation 5: Best costs = [0.011257318779826164]\n",
+      "Generation 6: Best costs = [0.017810005694627762]\n",
+      "Generation 7: Best costs = [0.015877146273851395]\n",
+      "Generation 8: Best costs = [0.014126379042863846]\n",
+      "Generation 9: Best costs = [0.012321148067712784]\n",
+      "[0.01232115 0.01234639 0.01244105 0.01379287 0.01412638 0.01477118\n",
+      " 0.01642179 0.0207346  0.03511301]\n",
+      "[[np.float32(0.052775364), np.float32(0.014877506), np.float32(0.015357095), np.float32(0.012289339), np.float32(0.012848918), np.float32(0.011257319), np.float32(0.017810006), np.float32(0.015877146), np.float32(0.014126379), np.float32(0.012321148)]]\n"
      ]
     }
    ],
@@ -191,11 +223,14 @@
     "\n",
     "kgs.debugging_mode = 2\n",
     "\n",
-    "runner = pack_ga2.Orchestrator(n_generations=5)\n",
+    "runner = pack_ga2.Orchestrator(n_generations=10)\n",
     "runner.ga = pack_ga2.GASinglePopulationOld(N_trees_to_do=40)\n",
     "\n",
     "runner.ga.population_size = 100\n",
     "runner.ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
+    "runner.ga.fixed_h = 4.\n",
+    "runner.ga.reduce_h_threshold = 0.01\n",
+    "runner.ga.reduce_h_amount = 0.03\n",
     "\n",
     "runner.run()\n",
     "print(runner.ga.population.fitness)\n",
@@ -207,17 +242,7 @@
    "execution_count": null,
    "id": "52a0f450",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.16571155 0.16851051 0.16890755 0.16909623 0.16915894 0.16964057\n",
-      " 0.1697016  0.17119023 0.17459366]\n",
-      "[[np.float32(0.1956113), np.float32(0.17793527), np.float32(0.17460646), np.float32(0.17026095), np.float32(0.16571155)]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
